<resources>
    <string name="app_name">Stopwatch</string>
    <string name="timer">Timer</string>
    <string name="stopwatch">Stopwatch</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_00_00_00">00:00:00</string>
    <string name="this_is_stop_button">This is stop button</string>
    <string name="this_is_start_button">This is Start button</string>
    <string name="app_logo">App logo</string>
    <string name="matrix">\@matrix</string>

</resources>