<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.TimerFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:orientation="vertical">

        <TextView
            android:id="@+id/timerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/_00_00_00"
            android:textColor="#FFFFFF"
            android:textSize="70sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.42000002" />


        <NumberPicker
            android:id="@+id/hourPicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/NumberPickerText"
            app:layout_constraintBottom_toBottomOf="@+id/minutePicker"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.202"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/minutePicker"
            app:layout_constraintVertical_bias="1.0"
            android:soundEffectsEnabled="true"/>

        <NumberPicker
            android:id="@+id/minutePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/NumberPickerText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.406"
            android:soundEffectsEnabled="true"/>

        <NumberPicker
            android:id="@+id/secondPicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/NumberPickerText"
            app:layout_constraintBottom_toBottomOf="@+id/minutePicker"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.787"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/minutePicker"
            app:layout_constraintVertical_bias="0.326"
            android:soundEffectsEnabled="true"/>


        <ImageView
            android:id="@+id/playPauseButton"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="@string/this_is_start_button"
            android:src="@drawable/ic_baseline_play_circle_outline_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.626"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.85"
            tools:ignore="RedundantDescriptionCheck" />

        <ImageView
            android:id="@+id/stopButton"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="@string/this_is_stop_button"
            android:src="@drawable/ic_baseline_stop_circle_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.36"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.85"
            tools:ignore="RedundantDescriptionCheck" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/stopTimerBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:text="stop"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.97" />

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:focusable="false"
            android:focusableInTouchMode="false"

            android:progress="0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/timerText"
            app:layout_constraintStart_toStartOf="@+id/timerText"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.522"

            />


    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>